# as

boss/: .gradle.rar  (+3 more)
company_shipper/app_company/: CMakeLists.txt  build.gradle  local.properties  tinker-support.gradle
company_shipper/app_company/app/release/: output.json
company_shipper/app_company/src/main/: AndroidManifest.xml
company_shipper/app_company/src/main/cpp/: crypt-lib.cpp
company_shipper/app_company/src/main/res/drawable/: bg_appbagkground.xml  check_box_circular.xml  check_box_hook.xml
company_shipper/app_company/src/main/res/layout/: activity_festival.xml  activity_json_data.xml  activity_main.xml  activity_qr_code.xml  activity_start.xml  activity_test.xml  dialog_operator_detail.xml  dialog_ship_schedule.xml  fragment_analysis.xml  fragment_analysis2.xml  fragment_authorization.xml  fragment_backstage_logon.xml  fragment_business_cost_detail.xml  fragment_business_cost_list.xml  fragment_business_dynamic.xml  fragment_business_forwarder_container_detail.xml  fragment_business_main.xml  fragment_business_order2.xml  fragment_business_order_list2.xml  fragment_business_order_temp_list2.xml  fragment_business_temp.xml  fragment_business_transfer_cancel_list.xml  fragment_business_truck_container_detail.xml  fragment_company_info_detail.xml  fragment_forwarder_dispatching_information.xml  fragment_home.xml  fragment_home_home.xml  fragment_insurance.xml  fragment_loading_and_unloading_list.xml  fragment_loading_and_unloading_model.xml  fragment_location_management.xml  fragment_login_condition_configuration.xml  fragment_near_wifi_management.xml  (+75 more)
(+1198 files in other folders)
